syntax = "proto3";

option csharp_namespace = "MassTransit.GrpcTransport.Contracts";

package MassTransit.GrpcTransport.Contracts;

import "google/protobuf/timestamp.proto";

service TransportService {
  rpc EventStream (stream TransportMessage) returns (stream TransportMessage) {}
}

message TransportMessage {
  string message_id = 1;

  oneof content {
    Join join = 2;
    Welcome welcome = 3;
    Deliver deliver = 4;
    Topology topology = 5;
  }
}

message Node {
  string address = 1;
  string version = 2;
  string session_id = 3;
  map<string, string> host = 4;
  repeated Topology topology = 5;
}

message Join {
  Node node = 1;
}

message Part {
  Node node = 1;
}

message Welcome {
  Node node = 1;
  map<string, Node> peers = 2;
}

message Envelope {
  string message_id = 1;

  string request_id = 2;
  string conversation_id = 3;
  string correlation_id = 4;
  string initiator_id = 5;

  string source_address = 6;
  string destination_address = 7;
  string response_address = 8;
  string fault_address = 9;

  repeated string message_type = 10;

  string content_type = 11;
  bytes body = 12;

  NullableTimestamp enqueue_time = 13;
  NullableTimestamp expiration_time = 14;
  google.protobuf.Timestamp sent_time = 15;

  map<string, string> headers = 16;
}

message Deliver {
  int64 sequence_number = 1;
  Envelope envelope = 2;

  oneof destination {
    ExchangeDestination exchange = 3;
    QueueDestination queue = 4;
    ReceiverDestination receiver = 5;
  }
}

message ExchangeDestination {
  string name = 1;
  string routing_key = 2;
}

message QueueDestination {
  string name = 1;
}

message ReceiverDestination {
  string queue_name = 1;
  int64 receiver_id = 2;
}

message ConfirmDelivery {
  repeated int64 sequence_numbers = 1;
}

message Topology {
  int64 sequence_number = 1;
  bool valid = 2;

  oneof change {
    Exchange exchange = 3;
    ExchangeBind exchangeBind = 4;
    Queue queue = 5;
    QueueBind queueBind = 6;
    Receiver receiver = 7;
  }
}

enum ExchangeType {
  FanOut = 0;
  Direct = 1;
  Topic = 2;
}

message Exchange {
  string name = 1;
  ExchangeType type = 2;
}

message ExchangeBind {
  string source = 1;
  string destination = 2;
  string routing_key = 3;
}

message Queue {
  string name = 1;
}

message QueueBind {
  string source = 1;
  string destination = 2;
}

message Receiver {
  string queue_name = 1;
  int64 receiver_id = 2;
}

message Gossip {
  repeated Peer peers = 1;

  message Peer {
    string address = 1;
    int32 heartbeat = 2;
    repeated int32 suspect = 3;
  }
}

message NullableTimestamp {
  oneof timestamp {
    google.protobuf.Timestamp value = 1;
  }
}

